--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "postcss-mixins": "^11.0.3",
+        "postcss-nested": "^7.0.2"
     }
 }
