--- a/.lando.yml
+++ b/.lando.yml
@@ -54,7 +54,6 @@ tooling:
 proxy:
   appserver_nginx:
     - omegapoint.lndo.site
-    - admin.omegapoint.lndo.site
-    - news.omegapoint.lndo.site
+    - "*.omegapoint.lndo.site"
   node:
     - node.omegapoint.lndo.site:80
