--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://omegapoint.lndo.site
+APP_DOMAIN=omegapoint.lndo.site
+APP_URL=https://omegapoint.lndo.site
+APP_URL_ADMIN=https://admin.omegapoint.lndo.site
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
