--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^0.8.2",
+        "gsap": "^3.12.7",
         "postcss-mixins": "^11.0.3",
         "postcss-nested": "^7.0.2",
         "webfontloader": "^1.6.28"
