Improved lead & image generation

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "friendsofphp/php-cs-fixer": "^3.67",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "league/glide": "^2.3"
+        "league/glide-symfony": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
