--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@formkit/auto-animate": "^0.8.2",
+        "aos": "^2.3.4",
         "gsap": "^3.12.7",
         "postcss-mixins": "^11.0.3",
         "postcss-nested": "^7.0.2",
